# pgmanager

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/: dependabot.yml
src/: commands.rs  core.rs  lib.rs  main.rs  stats.rs  util.rs
